--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ streamlit>=1.25.0
 python-dotenv>=1.0.0
 PyPDF2>=3.0.0
 langchain>=0.1.0
+langchain-community>=0.0.195
 faiss-cpu>=1.7.4
 openai>=1.0.0
 huggingface-hub>=0.17.0
