--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-dotenv>=1.0.0
 PyPDF2>=3.0.0
 langchain>=0.2.0
 langchain-community>=0.0.195
+langchain-huggingface>=0.0.20
 faiss-cpu>=1.7.4
 openai>=1.0.0
 huggingface-hub>=0.17.0
